# NMTLunabotics2023

./: .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile_full_build  LICENSE  README.md  createmsgs.py  frames.gv  pointcloud.launch  push.sh  run.rviz  test.rviz  wifi.sh
can/: can_msg_map  david.kcd
can/bus_spec/: .gitignore  Makefile  can_msg_map  can_repl.py  canrepl  canshit.cpp  canshit.hpp  david.c  david.h  david.kcd  example.kcd  genfromkcd.py  helpers.cpp  limits.hpp  unpackers.cpp  unpackers.hpp
can/can_scripts/: canmonitor  canrepl  vcan_start.sh
can/canbed/: Makefile  screenlog.0
can/canbed/blink_led/: blink_led.ino  sketch.json
can/canbed/fuyu_recv/: fuyu_recv.ino
can/canbed/fuyu_send/: fuyu_send.ino  sketch.json
can/canbed/led_recv/: arduino_lib.hpp  led_recv.ino
can/canbed/led_send/: led_send.ino
can/canbed/loco_ctrl/: loco_ctrl.ino
can/canbed/mast_ctrl/: arduino_lib.hpp  mast_ctrl.ino
can/canbed/midwest_ctrl/: midwest_ctrl.ino
can/canbed/midwest_ctrl_excav/: arduino_lib.hpp  midwest_ctrl_excav.ino
can/canbed/midwest_ctrl_loco/: arduino_lib.hpp  david.c  david.h  midwest_ctrl_loco.ino
can/canbed/mirror/: mirror.ino
can/canbed/pitch_control_driver/: pitch_control_driver.ino
can/canbed/pitch_control_mega/: arduino_lib.hpp  pitch_control_mega.ino  sketch.json
can/canbed/pitch_ctrl/: david.h  pitch_ctrl.ino
can/canbed/pitch_ctrl_simple/: Makefile  david.ce  david.he  david.kcd  pitch_ctrl_simple.ino
can/canbed/servo_recv/: arduino_lib.hpp  servo_recv.ino
can/canbed/servo_send/: servo_send.ino  sketch.json
can/canbed/shared_lib/: arduino_lib.hpp
containers/: .gitignore  cameras.sh  cameras.yml  control.yml  mapping.sh  navigation_scan.sh  navigation_test.sh  pi.sh  robot.sh  robot.yml  rviz.yml  simulator.yml  simulator_master.yml  telem.yml
docker-scripts/: .#ros_term  clean.sh  ros_term  rosterm  setup_routes  setup_simulator_config  start_rviz  start_sim  stop  telem_term  webots_term
installation/: ubuntu.sh
ros/: Dockerfile  Dockerfile_full_build  ros_entrypoint.sh  shell.sh
ros/catkin_ws/src/david_conf/: CMakeLists.txt  package.xml
ros/catkin_ws/src/david_conf/config/: simple_map.yaml
ros/catkin_ws/src/david_conf/launch/: elevation_mapping.launch
ros/catkin_ws/src/david_config/: CMakeLists.txt  mapping.yaml  package.xml
ros/catkin_ws/src/david_config/config/: cost_map.yaml  extras.txt  mapping.yaml  postprocessing.yaml  postprocessor_pipeline.yaml  realsense_d455.yaml  rosconsole.conf  test_map.yaml
ros/catkin_ws/src/david_config/launch/: mapping.launch  mapping_module.launch  prep_mapping.launch  test_map.launch  transform.launch
ros/catkin_ws/src/david_config/src/: pc_pub.cpp  pcl_pub.cpp  pose_pub.cpp  raspi_cam.cpp
ros/catkin_ws/src/david_config/urdf/: david.xacro  david2.urdf  test.urdf  test.xacro
ros/catkin_ws/src/david_keyboard/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ros/catkin_ws/src/david_keyboard/src/: .keyboard.cpp.swp  keyboard.cpp
ros/catkin_ws/src/david_navigation/: CMakeLists.txt  package.xml
ros/catkin_ws/src/david_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_config.yaml
ros/catkin_ws/src/david_navigation/launch/: move_base.launch  nav_laserscan.launch  pc2ls.launch
ros/catkin_ws/src/david_navigation/src/: .#occupancy_grid.cpp  base_controller.cpp  occupancy.cpp  occupancy_grid.cpp
ros/catkin_ws/src/david_tui/: CMakeLists.txt  Gamepad.msg  mockup.org  mockup.txt
ros/catkin_ws/src/david_tui/src/: test  test.cpp  tui.cpp  tui_joystick.cpp
ros/catkin_ws/src/david_tui/src/joystick/: gamepad.cpp  gamepad.hpp  joystick.hpp
ros/catkin_ws/src/motor_bridge/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
ros/catkin_ws/src/motor_bridge/msg/: Adjust.msg  Digger.msg  Drive.msg  EStop.msg  Estop.msg  ExcavCtrl.msg  LocoCtrl.msg  MastCtrl.msg  MastTelem.msg  Pitch.msg  PitchAdjust.msg  PitchCtrl.msg  PitchDriverTelem.msg  PitchPositionTelem.msg  PitchTelem.msg  Stepp.msg  StepperCtrl.msg  StepperCtrlAdjust.msg  StepperTelem.msg  System.msg
ros/catkin_ws/src/motor_bridge/msgbkp/: Motor.msg  Pitch.msg  Stepp.msg  System.msg
ros/catkin_ws/src/motor_bridge/src/: can  can_interface.cpp  can_interface.hpp  drive_ctrl_node.cpp  estop_node.cpp  excav_ctrl_node.cpp  loco_ctrl_node.cpp  motor_bridge_node.cpp  pitch_ctrl_node.cpp  stepp_ctrl_node.cpp
ros/catkin_ws/src/motor_bridge/src/can/: Makefile  david.c  david.kcd
ros/catkin_ws/src/navigation/: CMakeLists.txt  package.xml
ros/catkin_ws/src/navigation/src/: costmap_cvt.cpp
ros/catkin_ws/src/pad_recv/: CMakeLists.txt  package.xml
ros/catkin_ws/src/pad_recv/src/: pad_recv.cpp
ros/catkin_ws/src/pad_send/: CMakeLists.txt  package.xml
ros/catkin_ws/src/pad_send/msg/: Gamepad.msg
ros/catkin_ws/src/pad_send/src/: pad_send.cpp  test  test.cpp
ros/catkin_ws/src/pad_send/src/joystick/: gamepad.cpp  gamepad.hpp  joystick.cpp  joystick.hpp
ros/catkin_ws/src/talker/: CMakeLists.txt  package.xml
ros/catkin_ws/src/webots_pose/: CMakeLists.txt  package.xml
ros/catkin_ws/src/webots_pose/src/: webots_pose_node.cpp
ros/scripts/: README  unfuck_realsense
scripts/: clean.sh  rec.sh  run_bag.sh  setssid  setupnetwork.sh  smudge.sh  stop  view_dig_cam  wpa_supplicant.conf
user/abethel/: accounting.org  ros-env  setup_nat.sh  shell.nix
user/lcf/: compnetwork.bat
webots/: webots-tmp-test.sh
webots/docker/: Dockerfile  install_webots_ros  test.urdf  webots.conf  webots_entrypoint
webots/models/: david.wbo
webots/robots/: david.wbo  david_prim.wbo
webots/worlds/: .gridmap_testbed.wbproj  .lunabotics.wbproj  .lunabotics_TEST_FLAT.wbproj  .lunabotics_TEST_FLAT_final.wbproj  gridmap_testbed.wbt  lidardemo.wbt  lunabotics.wbt  lunabotics_TEST_FLAT.wbt  lunabotics_TEST_FLAT_final.wbt  lunabotics_ai.wbt  lunabotics_fixing_sliding.wbt  lunabotics_tracked_animated.wbt  new.wbt  robot_modeling.wbt  world_flat.dae
webots_ros/: Dockerfile  build  rosterm  webots_entrypoint
(+291 files in other folders)
