<?xml version="1.0"?>
<package format="2">
  <name>pose_pub</name>
  <version>0.0.0</version>
  <description>The pose_pub package</description>

  <maintainer email="niallcdevlin@gmail.com">Niall Devlin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
