<?xml version="1.0"?>
<package format="2">
  <name>david_navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="niallcdevlin@gmail.com">Niall Devlin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>motor_bridge</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roscpp_serializion</depend>
  <depend>roslib</depend>
  <depend>rostime</depend>
  <depend>david_config</depend>

  <export>
  </export>
</package>
