<?xml version="1.0"?>
<package format="2">
  <name>motor_bridge</name>
  <version>0.1.0</version>
  <description>
    Interface from ROS to physical motors. Operates via a CAN bus when
    compiling for hardware, and is a thin wrapper around Webots motors
    when compiling for the simulator.
  </description>

  <maintainer email="alexander.bethel@student.nmt.edu">Alex Bethel</maintainer>

  <license>GPLv3</license>

  <!-- yoinked this from david_motor package.xml -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_exectime</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
